[package]
name = "DataVisualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26.2"
egui = "0.26.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
plotters = "0.3"
rfd = "0.12"
tracing-subscriber = "0.3"