[package]
name = "DataVisualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
plotters = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui_extras = "0.22.0"
