[package]
name = "DataVisualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
plotters = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["winuser"] }
